Working on the forward functions

--- a/Practice_Workspace.ipynb
+++ b/Practice_Workspace.ipynb
@@ -6,7 +6,7 @@
       "name": "Practice Workspace.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPehIb3zCGHC5RBs4akU/L/",
+      "authorship_tag": "ABX9TyPuUWyV1h+2DHkfoCgf/ile",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "qM5GZTrvuE1u",
-        "outputId": "3d1ed259-42b2-444b-fd1b-0ffdd7beb958",
+        "outputId": "bc2632f3-6ae1-4a26-e45f-2414cd62b92b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -55,7 +55,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "tXlhBuXyuSOu",
-        "outputId": "df6b4a22-8fd6-44bd-8fb1-0c5c0e6fcb69",
+        "outputId": "105cd431-62d9-4c1e-a097-d6bbcca15c2d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -262,7 +262,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "ikG20RdW751V",
-        "outputId": "4b5cd1a6-f5de-4edd-d64b-410b65e83bb8",
+        "outputId": "a78c35b1-9f88-4ebf-b09c-ff5bc0a1613b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 571
@@ -379,6 +379,30 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "rmCshlrg-RHw",
+        "outputId": "b2383a63-adcb-4ba7-e231-2e2e3192af29",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "print(train_loader)"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<torch.utils.data.dataloader.DataLoader object at 0x7eff8a987978>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "0lzL1y8lAjRC"
       },
       "source": [
@@ -450,8 +474,32 @@
       "source": [
         "dataloader=train_loader"
       ],
-      "execution_count": 17,
+      "execution_count": 15,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BZSQgeM48rrh",
+        "outputId": "bd8c1b1f-eebf-4ffa-93d5-2e092098b068",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "print(len(dataloader))"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -475,7 +523,7 @@
         "  loss.backward()\n",
         "  optimizer.step()"
       ],
-      "execution_count": 22,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -491,7 +539,7 @@
         "else:\n",
         "  print(float('nan'), float('nan'), [], [], [], float('nan'),[])"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -504,7 +552,7 @@
         "avg_accuracy = round(accuracy_score(labels,preds,sample_weight=masks)*100,2)\n",
         "avg_fscore = round(f1_score(labels,preds,sample_weight=masks,average='weighted')*100,2)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -526,7 +574,7 @@
         "print(avg_fscore)\n",
         "print([alphas, alphas_f, alphas_b, vids])"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
