Exploring dataloader for loop

--- a/Practice_Workspace.ipynb
+++ b/Practice_Workspace.ipynb
@@ -6,7 +6,7 @@
       "name": "Practice Workspace.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPuUWyV1h+2DHkfoCgf/ile",
+      "authorship_tag": "ABX9TyMyJ0v9cgIqBK5K6grNJr0V",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "qM5GZTrvuE1u",
-        "outputId": "bc2632f3-6ae1-4a26-e45f-2414cd62b92b",
+        "outputId": "e6a43548-4cf9-474b-b3ff-dfae76432b41",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -55,7 +55,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "tXlhBuXyuSOu",
-        "outputId": "105cd431-62d9-4c1e-a097-d6bbcca15c2d",
+        "outputId": "146a78fc-9ba8-4463-9d03-adecf6959481",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -262,7 +262,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "ikG20RdW751V",
-        "outputId": "a78c35b1-9f88-4ebf-b09c-ff5bc0a1613b",
+        "outputId": "f92adc5d-34a0-4096-d832-807e8a178def",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 571
@@ -380,21 +380,21 @@
       "cell_type": "code",
       "metadata": {
         "id": "rmCshlrg-RHw",
-        "outputId": "b2383a63-adcb-4ba7-e231-2e2e3192af29",
+        "outputId": "fbf7f9ac-8858-46cf-c630-2ce1b98fa336",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         }
       },
       "source": [
-        "print(train_loader)"
+        "print(len(train_loader))"
       ],
-      "execution_count": 23,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "<torch.utils.data.dataloader.DataLoader object at 0x7eff8a987978>\n"
+            "4\n"
           ],
           "name": "stdout"
         }
@@ -408,7 +408,7 @@
       "source": [
         "best_loss, best_label, best_pred, best_mask = None, None, None, None"
       ],
-      "execution_count": 13,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -463,7 +463,7 @@
         "masks = []\n",
         "alphas, alphas_f, alphas_b, vids = [], [], [], []"
       ],
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -474,14 +474,14 @@
       "source": [
         "dataloader=train_loader"
       ],
-      "execution_count": 15,
+      "execution_count": 16,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "BZSQgeM48rrh",
-        "outputId": "bd8c1b1f-eebf-4ffa-93d5-2e092098b068",
+        "outputId": "a38f715a-b569-4bf3-d535-9fcb99e33451",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -490,7 +490,7 @@
       "source": [
         "print(len(dataloader))"
       ],
-      "execution_count": 24,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -523,8 +523,96 @@
         "  loss.backward()\n",
         "  optimizer.step()"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kBAuGH8NYUcT",
+        "outputId": "0d233be6-54ba-40a9-ebfa-be09b5af32e4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        }
+      },
+      "source": [
+        "for data in dataloader:\n",
+        "  textf, visuf, acouf, qmask, umask, label =\\\n",
+        "                [d.cuda() for d in data[:-1]] if cuda else data[:-1]\n",
+        "  print(data[5])\n",
+        "  print(\"LABEL : \")\n",
+        "  print(label)"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "tensor([[2, 3, 2,  ..., 0, 0, 0],\n",
+            "        [2, 5, 5,  ..., 0, 0, 0],\n",
+            "        [2, 2, 5,  ..., 2, 0, 0],\n",
+            "        ...,\n",
+            "        [4, 4, 4,  ..., 0, 0, 0],\n",
+            "        [2, 0, 2,  ..., 0, 0, 0],\n",
+            "        [2, 2, 2,  ..., 0, 0, 0]])\n",
+            "LABEL : \n",
+            "tensor([[2, 3, 2,  ..., 0, 0, 0],\n",
+            "        [2, 5, 5,  ..., 0, 0, 0],\n",
+            "        [2, 2, 5,  ..., 2, 0, 0],\n",
+            "        ...,\n",
+            "        [4, 4, 4,  ..., 0, 0, 0],\n",
+            "        [2, 0, 2,  ..., 0, 0, 0],\n",
+            "        [2, 2, 2,  ..., 0, 0, 0]], device='cuda:0')\n",
+            "tensor([[4, 0, 4,  ..., 0, 0, 0],\n",
+            "        [5, 2, 5,  ..., 0, 0, 0],\n",
+            "        [2, 2, 2,  ..., 0, 0, 0],\n",
+            "        ...,\n",
+            "        [5, 5, 5,  ..., 0, 0, 0],\n",
+            "        [2, 2, 5,  ..., 0, 0, 0],\n",
+            "        [2, 1, 1,  ..., 0, 0, 0]])\n",
+            "LABEL : \n",
+            "tensor([[4, 0, 4,  ..., 0, 0, 0],\n",
+            "        [5, 2, 5,  ..., 0, 0, 0],\n",
+            "        [2, 2, 2,  ..., 0, 0, 0],\n",
+            "        ...,\n",
+            "        [5, 5, 5,  ..., 0, 0, 0],\n",
+            "        [2, 2, 5,  ..., 0, 0, 0],\n",
+            "        [2, 1, 1,  ..., 0, 0, 0]], device='cuda:0')\n",
+            "tensor([[1, 1, 1,  ..., 0, 0, 0],\n",
+            "        [2, 2, 2,  ..., 0, 0, 0],\n",
+            "        [3, 2, 2,  ..., 0, 0, 0],\n",
+            "        ...,\n",
+            "        [2, 2, 2,  ..., 0, 0, 0],\n",
+            "        [2, 5, 2,  ..., 0, 0, 0],\n",
+            "        [2, 2, 2,  ..., 0, 0, 0]])\n",
+            "LABEL : \n",
+            "tensor([[1, 1, 1,  ..., 0, 0, 0],\n",
+            "        [2, 2, 2,  ..., 0, 0, 0],\n",
+            "        [3, 2, 2,  ..., 0, 0, 0],\n",
+            "        ...,\n",
+            "        [2, 2, 2,  ..., 0, 0, 0],\n",
+            "        [2, 5, 2,  ..., 0, 0, 0],\n",
+            "        [2, 2, 2,  ..., 0, 0, 0]], device='cuda:0')\n",
+            "tensor([[2, 2, 2,  ..., 0, 0, 0],\n",
+            "        [2, 1, 1,  ..., 0, 0, 0],\n",
+            "        [1, 1, 1,  ..., 0, 0, 0],\n",
+            "        ...,\n",
+            "        [4, 4, 4,  ..., 0, 0, 0],\n",
+            "        [3, 3, 2,  ..., 0, 0, 0],\n",
+            "        [1, 1, 5,  ..., 0, 0, 0]])\n",
+            "LABEL : \n",
+            "tensor([[2, 2, 2,  ..., 0, 0, 0],\n",
+            "        [2, 1, 1,  ..., 0, 0, 0],\n",
+            "        [1, 1, 1,  ..., 0, 0, 0],\n",
+            "        ...,\n",
+            "        [4, 4, 4,  ..., 0, 0, 0],\n",
+            "        [3, 3, 2,  ..., 0, 0, 0],\n",
+            "        [1, 1, 5,  ..., 0, 0, 0]], device='cuda:0')\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
