Added till DialogueRNN forward method

--- a/Practice_Workspace.ipynb
+++ b/Practice_Workspace.ipynb
@@ -6,7 +6,7 @@
       "name": "Practice Workspace.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMyJ0v9cgIqBK5K6grNJr0V",
+      "authorship_tag": "ABX9TyOeNRDZD57RLcZNPlufe/Ic",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -527,88 +527,61 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tAI08-QaeOwF"
+      },
+      "source": [
+        "**Use the below cell to play with data inside the for loop**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "kBAuGH8NYUcT",
-        "outputId": "0d233be6-54ba-40a9-ebfa-be09b5af32e4",
+        "id": "kBAuGH8NYUcT"
+      },
+      "source": [
+        "# for data in dataloader:\n",
+        "#   textf, visuf, acouf, qmask, umask, label =\\\n",
+        "#                 [d.cuda() for d in data[:-1]] if cuda else data[:-1]\n",
+        "#   print(data[5])\n",
+        "#   print(\"LABEL : \")\n",
+        "#   print(label)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bGTGDrjdeXvd"
+      },
+      "source": [
+        "**Forward Function inside DialogueRNN **"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4qh0Smhnbk86",
+        "outputId": "f0556bb7-d046-47a8-dff3-d2aabb1721dd",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 84
         }
       },
       "source": [
-        "for data in dataloader:\n",
-        "  textf, visuf, acouf, qmask, umask, label =\\\n",
-        "                [d.cuda() for d in data[:-1]] if cuda else data[:-1]\n",
-        "  print(data[5])\n",
-        "  print(\"LABEL : \")\n",
-        "  print(label)"
+        "g_hist = torch.zeros(0).type(U.type())"
       ],
-      "execution_count": 26,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "tensor([[2, 3, 2,  ..., 0, 0, 0],\n",
-            "        [2, 5, 5,  ..., 0, 0, 0],\n",
-            "        [2, 2, 5,  ..., 2, 0, 0],\n",
-            "        ...,\n",
-            "        [4, 4, 4,  ..., 0, 0, 0],\n",
-            "        [2, 0, 2,  ..., 0, 0, 0],\n",
-            "        [2, 2, 2,  ..., 0, 0, 0]])\n",
-            "LABEL : \n",
-            "tensor([[2, 3, 2,  ..., 0, 0, 0],\n",
-            "        [2, 5, 5,  ..., 0, 0, 0],\n",
-            "        [2, 2, 5,  ..., 2, 0, 0],\n",
-            "        ...,\n",
-            "        [4, 4, 4,  ..., 0, 0, 0],\n",
-            "        [2, 0, 2,  ..., 0, 0, 0],\n",
-            "        [2, 2, 2,  ..., 0, 0, 0]], device='cuda:0')\n",
-            "tensor([[4, 0, 4,  ..., 0, 0, 0],\n",
-            "        [5, 2, 5,  ..., 0, 0, 0],\n",
-            "        [2, 2, 2,  ..., 0, 0, 0],\n",
-            "        ...,\n",
-            "        [5, 5, 5,  ..., 0, 0, 0],\n",
-            "        [2, 2, 5,  ..., 0, 0, 0],\n",
-            "        [2, 1, 1,  ..., 0, 0, 0]])\n",
-            "LABEL : \n",
-            "tensor([[4, 0, 4,  ..., 0, 0, 0],\n",
-            "        [5, 2, 5,  ..., 0, 0, 0],\n",
-            "        [2, 2, 2,  ..., 0, 0, 0],\n",
-            "        ...,\n",
-            "        [5, 5, 5,  ..., 0, 0, 0],\n",
-            "        [2, 2, 5,  ..., 0, 0, 0],\n",
-            "        [2, 1, 1,  ..., 0, 0, 0]], device='cuda:0')\n",
-            "tensor([[1, 1, 1,  ..., 0, 0, 0],\n",
-            "        [2, 2, 2,  ..., 0, 0, 0],\n",
-            "        [3, 2, 2,  ..., 0, 0, 0],\n",
-            "        ...,\n",
-            "        [2, 2, 2,  ..., 0, 0, 0],\n",
-            "        [2, 5, 2,  ..., 0, 0, 0],\n",
-            "        [2, 2, 2,  ..., 0, 0, 0]])\n",
-            "LABEL : \n",
-            "tensor([[1, 1, 1,  ..., 0, 0, 0],\n",
-            "        [2, 2, 2,  ..., 0, 0, 0],\n",
-            "        [3, 2, 2,  ..., 0, 0, 0],\n",
-            "        ...,\n",
-            "        [2, 2, 2,  ..., 0, 0, 0],\n",
-            "        [2, 5, 2,  ..., 0, 0, 0],\n",
-            "        [2, 2, 2,  ..., 0, 0, 0]], device='cuda:0')\n",
-            "tensor([[2, 2, 2,  ..., 0, 0, 0],\n",
-            "        [2, 1, 1,  ..., 0, 0, 0],\n",
-            "        [1, 1, 1,  ..., 0, 0, 0],\n",
-            "        ...,\n",
-            "        [4, 4, 4,  ..., 0, 0, 0],\n",
-            "        [3, 3, 2,  ..., 0, 0, 0],\n",
-            "        [1, 1, 5,  ..., 0, 0, 0]])\n",
-            "LABEL : \n",
-            "tensor([[2, 2, 2,  ..., 0, 0, 0],\n",
-            "        [2, 1, 1,  ..., 0, 0, 0],\n",
-            "        [1, 1, 1,  ..., 0, 0, 0],\n",
-            "        ...,\n",
-            "        [4, 4, 4,  ..., 0, 0, 0],\n",
-            "        [3, 3, 2,  ..., 0, 0, 0],\n",
-            "        [1, 1, 5,  ..., 0, 0, 0]], device='cuda:0')\n"
+            "110\n",
+            "94\n",
+            "78\n",
+            "77\n"
           ],
           "name": "stdout"
         }
