Updated for all 3 forwards

--- a/Practice_Workspace.ipynb
+++ b/Practice_Workspace.ipynb
@@ -6,7 +6,7 @@
       "name": "Practice Workspace.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOeNRDZD57RLcZNPlufe/Ic",
+      "authorship_tag": "ABX9TyMGv9uZDu6UNrBP9DoBfsM3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -527,6 +527,31 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GcGzCF-rmyDd",
+        "outputId": "68874c6a-5768-4cba-a11b-65fbbd93bcfc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "labels_ = label.view(-1)\n",
+        "print(len(labels[3]))"
+      ],
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1536\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "tAI08-QaeOwF"
@@ -557,35 +582,70 @@
         "id": "bGTGDrjdeXvd"
       },
       "source": [
-        "**Forward Function inside DialogueRNN **"
+        "**Forward Function inside DialogueRNN Analysis **"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "4qh0Smhnbk86",
-        "outputId": "f0556bb7-d046-47a8-dff3-d2aabb1721dd",
+        "outputId": "28dff3f0-cd98-4206-8157-7e03e1a5a2aa",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 84
+          "height": 34
         }
       },
       "source": [
-        "g_hist = torch.zeros(0).type(U.type())"
+        "g_hist = torch.zeros(0).type(textf.type())                      "
       ],
-      "execution_count": 33,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "110\n",
-            "94\n",
-            "78\n",
-            "77\n"
+            "tensor([], device='cuda:0')\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kfR1CdaZfiOh"
+      },
+      "source": [
+        "q_ = torch.zeros(qmask.size()[1], qmask.size()[2],\n",
+        "                                    500).type(textf.type())\n",
+        "e_ = torch.zeros(0).type(textf.type())"
+      ],
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-o9tCsgshGbH"
+      },
+      "source": [
+        "print(textf)\n",
+        "for u_,qmask_ in zip(textf, qmask):\n",
+        "  print(u_)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PdtNsaF6jAXO"
+      },
+      "source": [
+        "qm_idx = torch.argmax(qmask, 1)\n",
+        "print(qm_idx)"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
