Basic preprocessed data and labels for passing through models

--- a/Idea_Generator.ipynb
+++ b/Idea_Generator.ipynb
@@ -6,7 +6,7 @@
       "name": "Idea_Generator.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPk4ENI9iLTSNX/iCYCAmWw",
+      "authorship_tag": "ABX9TyOhwMxOKabP4N9nO+hVLJa+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "7bYa3pQi_QfF",
-        "outputId": "e879614a-7054-4c03-dc57-a1116c928589",
+        "outputId": "adc0e02f-5a12-473e-a327-29fdd7aaf336",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -66,7 +66,10 @@
       },
       "source": [
         "import pickle\n",
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from keras.preprocessing.text import Tokenizer\n",
+        "from keras.utils.np_utils import to_categorical  "
       ],
       "execution_count": 24,
       "outputs": []
@@ -84,7 +87,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "WVLdVrED_zpN",
-        "outputId": "8e31301e-cc53-49c9-9947-e8f806d114d3",
+        "outputId": "09aa350a-97d7-484c-db20-c4c057cb8aa2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -95,7 +98,7 @@
         "    data = pickle.load(f)\n",
         "print(data)"
       ],
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -119,7 +122,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "oOOqby6VNjxm",
-        "outputId": "8d47cf49-7ad2-4b83-9c5e-a1cd0996d832",
+        "outputId": "3b908e3a-3208-4782-f6e8-13985936f457",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -131,7 +134,7 @@
         "\n",
         "print(labels)"
       ],
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -205,14 +208,14 @@
         "    processed_data.append(text)\n",
         "    processed_label.append(label)"
       ],
-      "execution_count": 35,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "RcznixUS0M5m",
-        "outputId": "eb22583a-0a1e-4c74-8209-b287a2855b03",
+        "outputId": "4a0f2d78-1150-43a4-fcc1-dd73f44e1736",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 70
@@ -222,7 +225,7 @@
         "print(processed_data)\n",
         "print(processed_label)"
       ],
-      "execution_count": 44,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -233,6 +236,20 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QQILI6XS3oZi"
+      },
+      "source": [
+        "t = Tokenizer()\n",
+        "t.fit_on_texts(processed_data)\n",
+        "encoded_docs = t.texts_to_matrix(processed_data, mode='tfidf')\n",
+        "categorical_labels = to_categorical(processed_label, num_classes=6)"
+      ],
+      "execution_count": 26,
+      "outputs": []
     }
   ]
 }
