Added test validations

--- a/Idea_Generator.ipynb
+++ b/Idea_Generator.ipynb
@@ -6,7 +6,7 @@
       "name": "Idea_Generator.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN5R9WoTolq3EYaanphFwsv",
+      "authorship_tag": "ABX9TyMV/3oIj0imddG2vTS1EmPu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -278,22 +278,48 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "xu4S5bPRFmdX"
+      },
+      "source": [
+        "processed_data,processed_label = preprocessing(data,labels)\n",
+        "test_processed_data,test_processed_label = preprocessing(test_data,test_labels)"
+      ],
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "QQILI6XS3oZi"
       },
       "source": [
-        "t = Tokenizer()\n",
-        "t.fit_on_texts(processed_data)\n",
-        "X = t.texts_to_matrix(processed_data, mode='tfidf')\n",
-        "Y = to_categorical(processed_label, num_classes=6)"
+        "def Tokenize(processed_data,processed_label):\n",
+        "  t = Tokenizer()\n",
+        "  t.fit_on_texts(processed_data)\n",
+        "  X = t.texts_to_matrix(processed_data, mode='tfidf')\n",
+        "  Y = to_categorical(processed_label, num_classes=6)\n",
+        "  return X,Y"
       ],
-      "execution_count": 7,
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2klV4PBRF3oL"
+      },
+      "source": [
+        "X,Y = Tokenize(processed_data, processed_label)\n",
+        "test_X , test_Y = Tokenize(test_processed_data,test_processed_label)"
+      ],
+      "execution_count": 21,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "FVOj_vZa9QY-",
-        "outputId": "bb0a47fc-e58e-4811-cb21-daae64c051a5",
+        "outputId": "5812972f-1c44-4bab-d3e0-58c2c4f0664f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 269
@@ -309,20 +335,20 @@
         "model.compile(loss = 'categorical_crossentropy', optimizer='adam',metrics = ['accuracy'])\n",
         "print(model.summary())"
       ],
-      "execution_count": 11,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Model: \"sequential_1\"\n",
+            "Model: \"sequential_2\"\n",
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "embedding_1 (Embedding)      (None, 2420, 128)         320000    \n",
+            "embedding_2 (Embedding)      (None, 2420, 128)         320000    \n",
             "_________________________________________________________________\n",
-            "lstm_1 (LSTM)                (None, 200)               263200    \n",
+            "lstm_2 (LSTM)                (None, 200)               263200    \n",
             "_________________________________________________________________\n",
-            "dense_1 (Dense)              (None, 6)                 1206      \n",
+            "dense_2 (Dense)              (None, 6)                 1206      \n",
             "=================================================================\n",
             "Total params: 584,406\n",
             "Trainable params: 584,406\n",
@@ -337,17 +363,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8Drtb5JA-vnN"
-      },
-      "source": [
-        "X_train, X_valid, Y_train, Y_valid = train_test_split(X,Y, test_size = 0.20, random_state = 36)"
-      ],
-      "execution_count": 12,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "fup010SF_SjA",
         "outputId": "25202141-2183-45fb-8e44-400cb97cf32d",
         "colab": {
@@ -356,7 +371,7 @@
         }
       },
       "source": [
-        "model.fit(X_train, Y_train, epochs = 10,  verbose = 1)"
+        "model.fit(X, Y, epochs = 10,  verbose = 1)"
       ],
       "execution_count": 14,
       "outputs": [
@@ -397,6 +412,34 @@
             "tags": []
           },
           "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1aapwUcUHxQB",
+        "outputId": "54aaaebf-e769-48bc-89de-d3320283961c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 104
+        }
+      },
+      "source": [
+        "score,acc=model.evaluate(test_X,test_Y,verbose=2)\n",
+        "print(\"Accuracy : \"+ str(acc))"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:Model was constructed with shape (None, 2420) for input Tensor(\"embedding_2_input:0\", shape=(None, 2420), dtype=float32), but it was called on an input with incompatible shape (None, 1613).\n",
+            "WARNING:tensorflow:Model was constructed with shape (None, 2420) for input Tensor(\"embedding_2_input:0\", shape=(None, 2420), dtype=float32), but it was called on an input with incompatible shape (None, 1613).\n",
+            "51/51 - 2s - loss: 1.7907 - accuracy: 0.1842\n",
+            "Accuracy : 0.18422673642635345\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
