Added Bi-LSTM model

--- a/Idea_Generator.ipynb
+++ b/Idea_Generator.ipynb
@@ -6,7 +6,7 @@
       "name": "Idea_Generator.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMV/3oIj0imddG2vTS1EmPu",
+      "authorship_tag": "ABX9TyN9hXjtm6tg+VPBup16N88B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,12 +72,12 @@
         "import keras\n",
         "from sklearn.model_selection import train_test_split\n",
         "from keras.models import Sequential\n",
-        "from keras.layers import Dense, Dropout, LSTM, Embedding\n",
+        "from keras.layers import Dense, Dropout, LSTM, Embedding, Bidirectional\n",
         "from keras.optimizers import Adam\n",
         "from keras.preprocessing.text import Tokenizer\n",
         "from keras.utils.np_utils import to_categorical  "
       ],
-      "execution_count": 2,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -93,7 +93,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "WVLdVrED_zpN",
-        "outputId": "914b19c6-a049-4c6d-98f3-d69eae4f7441",
+        "outputId": "a8643528-9ff3-4e9e-d959-f29a4fbf038e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -104,7 +104,7 @@
         "    data = pickle.load(f)\n",
         "print(data)"
       ],
-      "execution_count": 3,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,7 +128,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "oOOqby6VNjxm",
-        "outputId": "961d95ca-6415-48bf-fe50-782372030571",
+        "outputId": "b1da018d-3928-49c5-c5b8-78dc8bb0bb46",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -140,7 +140,7 @@
         "\n",
         "print(labels)"
       ],
-      "execution_count": 4,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,7 +164,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "3JgC9Dhf_w3u",
-        "outputId": "32da174b-8405-4bca-fc0e-8bab2a103b5c",
+        "outputId": "9a5b61ea-f7e7-4013-c25e-9e9c90361571",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -175,7 +175,7 @@
         "    test_data = pickle.load(f)\n",
         "print(test_data)"
       ],
-      "execution_count": 15,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,7 +199,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "DpazL6T9_47e",
-        "outputId": "4269e2a0-9ae9-4174-b372-97db399b53f2",
+        "outputId": "d83ab972-33a4-4d6b-b211-f1fbc5cf971d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -211,7 +211,7 @@
         "\n",
         "print(test_labels)"
       ],
-      "execution_count": 16,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -272,7 +272,7 @@
         "      processed_label.append(label)\n",
         "  return processed_data,processed_label"
       ],
-      "execution_count": 18,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -284,7 +284,7 @@
         "processed_data,processed_label = preprocessing(data,labels)\n",
         "test_processed_data,test_processed_label = preprocessing(test_data,test_labels)"
       ],
-      "execution_count": 19,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -300,7 +300,7 @@
         "  Y = to_categorical(processed_label, num_classes=6)\n",
         "  return X,Y"
       ],
-      "execution_count": 20,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -312,14 +312,23 @@
         "X,Y = Tokenize(processed_data, processed_label)\n",
         "test_X , test_Y = Tokenize(test_processed_data,test_processed_label)"
       ],
-      "execution_count": 21,
+      "execution_count": 32,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "saFECkrtRRdu"
+      },
+      "source": [
+        "**Simple Bi-LSTM model**"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "FVOj_vZa9QY-",
-        "outputId": "5812972f-1c44-4bab-d3e0-58c2c4f0664f",
+        "outputId": "afec5301-a1dd-4697-e5b4-8d8983b91a7f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 269
@@ -330,28 +339,28 @@
         "embed_dim=128\n",
         "model = Sequential()\n",
         "model.add(Embedding(2500, embed_dim,input_length = X.shape[1]))\n",
-        "model.add(LSTM(lstm_out))\n",
+        "model.add(Bidirectional(LSTM(200)))\n",
         "model.add(Dense(6,activation='softmax'))\n",
         "model.compile(loss = 'categorical_crossentropy', optimizer='adam',metrics = ['accuracy'])\n",
         "print(model.summary())"
       ],
-      "execution_count": 22,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Model: \"sequential_2\"\n",
+            "Model: \"sequential_6\"\n",
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "embedding_2 (Embedding)      (None, 2420, 128)         320000    \n",
+            "embedding_6 (Embedding)      (None, 2420, 128)         320000    \n",
             "_________________________________________________________________\n",
-            "lstm_2 (LSTM)                (None, 200)               263200    \n",
+            "bidirectional_2 (Bidirection (None, 400)               526400    \n",
             "_________________________________________________________________\n",
-            "dense_2 (Dense)              (None, 6)                 1206      \n",
+            "dense_5 (Dense)              (None, 6)                 2406      \n",
             "=================================================================\n",
-            "Total params: 584,406\n",
-            "Trainable params: 584,406\n",
+            "Total params: 848,806\n",
+            "Trainable params: 848,806\n",
             "Non-trainable params: 0\n",
             "_________________________________________________________________\n",
             "None\n"
@@ -364,40 +373,42 @@
       "cell_type": "code",
       "metadata": {
         "id": "fup010SF_SjA",
-        "outputId": "25202141-2183-45fb-8e44-400cb97cf32d",
+        "outputId": "ff40d03e-6eff-454c-a4e6-ea56a106fc22",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 370
         }
       },
       "source": [
-        "model.fit(X, Y, epochs = 10,  verbose = 1)"
+        "model.fit(X, Y, epochs = 10,  verbose = 1)\n",
+        "score,acc=model.evaluate(test_X,test_Y,verbose=2)\n",
+        "print(\"Accuracy : \"+ str(acc))"
       ],
-      "execution_count": 14,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Epoch 1/10\n",
-            "118/118 [==============================] - 16s 138ms/step - loss: 1.7255 - accuracy: 0.2445\n",
+            "147/147 [==============================] - 36s 248ms/step - loss: 1.7272 - accuracy: 0.2662\n",
             "Epoch 2/10\n",
-            "118/118 [==============================] - 16s 140ms/step - loss: 1.7253 - accuracy: 0.2525\n",
+            "147/147 [==============================] - 37s 248ms/step - loss: 1.7225 - accuracy: 0.2722\n",
             "Epoch 3/10\n",
-            "118/118 [==============================] - 16s 138ms/step - loss: 1.7236 - accuracy: 0.2525\n",
+            "147/147 [==============================] - 37s 249ms/step - loss: 1.7200 - accuracy: 0.2611\n",
             "Epoch 4/10\n",
-            "118/118 [==============================] - 16s 138ms/step - loss: 1.7241 - accuracy: 0.2506\n",
+            "147/147 [==============================] - 37s 250ms/step - loss: 1.7166 - accuracy: 0.2715\n",
             "Epoch 5/10\n",
-            "118/118 [==============================] - 16s 137ms/step - loss: 1.7237 - accuracy: 0.2469\n",
+            "147/147 [==============================] - 37s 253ms/step - loss: 1.7139 - accuracy: 0.2713\n",
             "Epoch 6/10\n",
-            "118/118 [==============================] - 16s 138ms/step - loss: 1.7236 - accuracy: 0.2530\n",
+            "147/147 [==============================] - 37s 254ms/step - loss: 1.7123 - accuracy: 0.2660\n",
             "Epoch 7/10\n",
-            "118/118 [==============================] - 16s 139ms/step - loss: 1.7318 - accuracy: 0.2530\n",
+            "147/147 [==============================] - 37s 255ms/step - loss: 1.7092 - accuracy: 0.2732\n",
             "Epoch 8/10\n",
-            "118/118 [==============================] - 16s 139ms/step - loss: 1.7247 - accuracy: 0.2463\n",
+            "147/147 [==============================] - 37s 254ms/step - loss: 1.7067 - accuracy: 0.2745\n",
             "Epoch 9/10\n",
-            "118/118 [==============================] - 16s 138ms/step - loss: 1.7206 - accuracy: 0.2538\n",
+            "147/147 [==============================] - 38s 256ms/step - loss: 1.7014 - accuracy: 0.2745\n",
             "Epoch 10/10\n",
-            "118/118 [==============================] - 16s 138ms/step - loss: 1.7200 - accuracy: 0.2461\n"
+            "147/147 [==============================] - 38s 262ms/step - loss: 1.7774 - accuracy: 0.2560\n"
           ],
           "name": "stdout"
         },
@@ -405,41 +416,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7fbb6d7dd5f8>"
+              "<tensorflow.python.keras.callbacks.History at 0x7fbb6c206ac8>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "1aapwUcUHxQB",
-        "outputId": "54aaaebf-e769-48bc-89de-d3320283961c",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 104
-        }
-      },
-      "source": [
-        "score,acc=model.evaluate(test_X,test_Y,verbose=2)\n",
-        "print(\"Accuracy : \"+ str(acc))"
-      ],
-      "execution_count": 23,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "WARNING:tensorflow:Model was constructed with shape (None, 2420) for input Tensor(\"embedding_2_input:0\", shape=(None, 2420), dtype=float32), but it was called on an input with incompatible shape (None, 1613).\n",
-            "WARNING:tensorflow:Model was constructed with shape (None, 2420) for input Tensor(\"embedding_2_input:0\", shape=(None, 2420), dtype=float32), but it was called on an input with incompatible shape (None, 1613).\n",
-            "51/51 - 2s - loss: 1.7907 - accuracy: 0.1842\n",
-            "Accuracy : 0.18422673642635345\n"
-          ],
-          "name": "stdout"
+          "execution_count": 40
         }
       ]
     }
